--- a/Bootstrap 01/index.html
+++ b/Bootstrap 01/index.html
@@ -28,10 +28,10 @@
                         <i class="fab fa-product-hunt"></i> Products
                     </a>
                     <div class="dropdown-menu" aria-labelledby="productDropdown">
-                        <a class="dropdown-item" href="#">Browse Categories</a>
-                        <a class="dropdown-item" href="#">Product Search</a>
+                         <a class="dropdown-item" href="#"><i class="fas fa-bars"></i> Browse Categories</a>
+                         <a class="dropdown-item" href="#"><i class="fas fa-search"></i> Product Search</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Current Discounts</a>
+                         <a class="dropdown-item" href="#"><i class="fas fa-tag"></i> Current Discounts</a>
                     </div>
                 </li>
             </ul>
