--- a/Bootstrap 01/index.html
+++ b/Bootstrap 01/index.html
@@ -15,18 +15,19 @@
     <link rel="stylesheet" href="custom.css">
 </head>
 <body>
-        <!-- toast -->
+        <!-- toast for product 1 -->
         <div id="toast" class="toast">
             <div class="toast-header">
-                <strong class="mr-auto" id="product">Product Name</strong>
+                <strong class="mr-auto" id="product" data-value="Seasoning"></strong>
                 <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
             <div class="toast-body">
-                Discount Code: <strong id="code">CODE</strong>
+                Discount Code: <strong id="code" data-value="CODE"></strong>
             </div>
         </div>
+
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <a class="navbar-brand" href="#"><i class="far fa-compass"></i> Northwind</a>
@@ -71,7 +72,7 @@
         </div>
     </nav>
     
-    <div class="jumbotron">
+    <div class="jumbotron mb-0">
         <h1 class="display-3">Northwind</h1>
         <p class="lead">We have the best prices and selection of high quality foods & beverages on the planet! Check out our featured discounts below.</p>
         <hr class="my-4">
@@ -93,10 +94,21 @@
                     <a href="#" class="code"><i class="far fa-hand-point-right"></i> Discount Code</a>
                 </div>
                 <div class="col-md m-3 p-3 discounts">
-                    Col 2
+                    <h3>Go Green</h3>
+                    <div class="mb-4">Genen Shouyu goes on sale very rarely. Order
+                        now to save 10% off our already low price.
+                    </div>
+                    <i>Discount expires: 2/25/2019</i><br />
+                    <a href="#" class="code"><i class="far fa-hand-point-right"></i> Discount Code</a>
                 </div>
                 <div class="col-md m-3 p-3 discounts">
-                    Col 3
+                    <h3>Half Price</h3>
+                    <div class="mb-4">
+                        Just because you can't pronounce "Schoggi Schokolade"
+                        doesn't mean you shouldn't buy it. Get it now for 50% off!
+                    </div>
+                    <i>Discount expires: 2/25/2019</i><br />
+                    <a href="#" class="code"><i class="far fa-hand-point-right"></i> Discount Code</a>
             </div>
         </div>
       
