--- a/Bootstrap 01/index.html
+++ b/Bootstrap 01/index.html
@@ -91,7 +91,7 @@
                          You don't want to make Chef Anton mad, do you?
                     </div>
                     <i>Discount expires: 2/25/2019</i><br />
-                    <a href="#" class="code"><i class="far fa-hand-point-right"></i> Discount Code</a>
+                    <a href="#" class="code" data-code="5567" data-product="Italian Seasoning"><i class="far fa-hand-point-right"></i> Discount Code</a>
                 </div>
                 <div class="col-md m-3 p-3 discounts">
                     <h3>Go Green</h3>
@@ -99,7 +99,7 @@
                         now to save 10% off our already low price.
                     </div>
                     <i>Discount expires: 2/25/2019</i><br />
-                    <a href="#" class="code"><i class="far fa-hand-point-right"></i> Discount Code</a>
+                    <a href="#" class="code" data-code="4452" data-product="Genen Shouyu"><i class="far fa-hand-point-right"></i> Discount Code</a>
                 </div>
                 <div class="col-md m-3 p-3 discounts">
                     <h3>Half Price</h3>
@@ -108,7 +108,7 @@
                         doesn't mean you shouldn't buy it. Get it now for 50% off!
                     </div>
                     <i>Discount expires: 2/25/2019</i><br />
-                    <a href="#" class="code"><i class="far fa-hand-point-right"></i> Discount Code</a>
+                    <a href="#" class="code" data-code="9957" data-product="Schoggi Schokolade"><i class="far fa-hand-point-right"></i> Discount Code</a>
             </div>
         </div>
       
