--- a/Bootstrap 01/balloons.html
+++ b/Bootstrap 01/balloons.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <meta name="viewport" content="width=device-width">
@@ -9,9 +9,78 @@
     <!-- pickadate -->
     <link rel="stylesheet" href="default.css" />
     <link rel="stylesheet" href="default.date.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <!-- google font -->
+    <link href="https://fonts.googleapis.com/css?family=Londrina+Shadow|Questrial" rel="stylesheet">
+    <!-- custom css -->
+    <style>
+        h1 {
+            font-family: 'Londrina Shadow';
+            color: slategray;
+            font-size: 3.5em;
+        }
+        body {
+            font-family: 'Questrial';
+        }
+        h1.animated {
+            display: inline-block;
+        }
+        .ball{
+            visibility: hidden;
+        }
+    </style>
 </head>
 <body>
-
+    <!-- content -->
+    <div class="container">
+        <h1 id="header1">Happy Birthday!</h1><hr />
+        <div id="toast" class="toast">
+            <div class="toast-header">
+                <strong class="mr-auto" id="product" data-value="Happy Birthday">No balloons are checked</strong>
+                <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+        </div>
+        <form role="form">
+            <div class="row">
+                <div class="col-sm">
+                    <div class="form-group">
+                        <label for="name">Name</label>
+                        <input type="text" class="form-control" id="name" placeholder="Enter name">
+                    </div>
+                    <div class="form-group">
+                        <label for="birthday">Birthday</label>
+                        <input type="text" class="form-control" id="birthday" placeholder="Enter birthday" />
+                    </div>
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">Select your favorite balloons</h5>
+                            <div class="form-group form-check">
+                                <input type="checkbox" class="form-check-input" id="red">
+                                <label class="form-check-label" for="red">Red balloons</label>
+                            </div>
+                            <div class="form-group form-check">
+                                <input type="checkbox" class="form-check-input" id="green">
+                                <label class="form-check-label" for="green">Green balloons</label>
+                            </div>
+                            <div class="form-group form-check">
+                                <input type="checkbox" class="form-check-input" id="blue">
+                                <label class="form-check-label" for="blue">Blue balloons</label>
+                            </div>
+                        </div>
+                        <button type=button class=btn-btn-outline-seconday id="checkAll">Check all</button>
+                    </div>
+                    <button type="button" class="btn btn-outline-primary mt-3" id="submit">Submit</button>
+                </div>
+                <div class="col-sm">
+                    <img src="red balloon.png" class="ball" alt="red balloon" id="redImg" />
+                    <img src="green balloon.png" class="ball" alt="green balloon" id="greenImg" />
+                    <img src="blue balloon.png" class="ball" alt="blue balloon" id="blueImg" />
+                </div>
+            </div>
+        </form>
+    </div>
 
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
@@ -22,5 +91,7 @@
     <!-- pickadate -->
     <script src="picker.js"></script>
     <script src="picker.date.js"></script>
+    <!-- custom js -->
+    <script src="balloons.js"></script>
 </body>
 </html>
